# 314-Final-Project

./: README.md  project.py  pyproject.toml  tests.py
stroke/: README.md  pyproject.toml
stroke/data/: healthcare-dataset-stroke-data.csv
stroke/src/stroke/: __init__.py  project.py
