[project]
name = "stroke"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Krisha Anant", email = "106985883+krishaanant@users.noreply.github.com" }
]
dependencies = [
    "pandas>=2.2.2",
    "scikit-learn>=1.4.2",
    "numpy>=1.26.4",
    "matplotlib>=3.8.4",
    "kaggle>=1.6.11",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/stroke"]
